# gridfinity-pic-to-bin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
pic_to_bin/: README.md  fusion_install.py  layout_tools.py  phone_preprocess.py  phone_template.py  pipeline.py  prepare_bin.py  refine_trace.py  trace_export.py  trace_tool.py  validate_trace.py
pic_to_bin/pic_to_bin_addin/: README.md  _bin_builder.py  pic_to_bin.manifest  pic_to_bin.py
pic_to_bin/pic_to_bin_addin/resources/: README.md
pic_to_bin/pic_to_bin_script/: README.md  _bin_builder.py  pic_to_bin.manifest  pic_to_bin.py
pic_to_bin/web/: README.md  __init__.py  jobs.py  llm_check.py  overlay.py  server.py  vendor_lit.py
pic_to_bin/web/static/: README.md  app.js  home.html  index.html  styles.css
tests/: README.md  conftest.py  test_llm_check.py  test_overlay.py  test_phone_preprocess.py  test_phone_template.py  test_trace_export.py  test_web_jobs.py
